--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_name: GIRAF Wiki
 site_author: '@aau-giraf'
 repo_name: 'aau-giraf/wiki'
 repo_url: 'https://github.com/aau-giraf/wiki'
-edit_uri: ""
+edit_uri: "" # Is empty to remove 'edit' buttons on pages
 
 extra_css: 
   - 'extra/extra.css'
@@ -26,11 +26,12 @@ theme:
 
 # Plugins
 plugins:
-    - search
-    - awesome-pages
-    - git-revision-date-localized
+    - search                        # Adds search functionality
+    - awesome-pages                 # Used to arrange tabs and pages manually
+    - git-revision-date-localized   # Adds the "Last update: x" on the bottom of pages
     
 # Markdown extensions
+# See list of extensions at https://squidfunk.github.io/mkdocs-material/extensions/admonition/
 markdown_extensions:
   - admonition
   - codehilite:
