additions to the 2020 project manual + revised review checklists
Co-Authored-By: Kasper <kshn16@student.aau.dk>
Co-Authored-By: mads-bo <mads-bo@users.noreply.github.com>
Co-Authored-By: Christian Hurley <hurley@progras.dk>
Co-Authored-By: Frederik Spang <frederikspang@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@
 # Site settings
 site_name: GIRAF Wiki
 site_author: '@aau-giraf'
-repo_name: 'aau-giraf/wiki'
-repo_url: 'https://github.com/aau-giraf/wiki'
+repo_name: 'aau-giraf'
+repo_url: 'https://github.com/aau-giraf'
 edit_uri: "" # Is empty to remove 'edit' buttons on pages
 
 extra_css: 
