--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Run mdl        
-        uses: actionshub/markdownlint@1.2.0            
+        uses: actionshub/markdownlint@1.2.0   
+          with:  
+            path: './docs'          
