--- a/.github/workflows/page-build.yml
+++ b/.github/workflows/page-build.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.x
       - run: pip install mkdocs-material 
       - run: mkdocs gh-deploy --force
