--- a/.github/workflows/page-build.yml
+++ b/.github/workflows/page-build.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      - run: pip install mkdocs-material 
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
 
       - name: Deploy docs
