--- a/.github/workflows/page-build.yml
+++ b/.github/workflows/page-build.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.x
+      - run: pip install --upgrade pip
       - run: pip install -r requirements.txt
 
       - name: Deploy docs
