--- a/.github/workflows/page-build.yml
+++ b/.github/workflows/page-build.yml
@@ -1,26 +1,23 @@
-name: Publish docs via GitHub Pages 2.0 
+name: Publish docs via GitHub Pages 3.0
 on:
   push:
     branches:
-      - master 
+      - master
 
-permissions:
-  contents: write
 jobs:
-  deploy:
+  build:
+    name: Deploy docs
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout master
-        uses: actions/checkout@v1
-
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.x
-      - run: pip install --upgrade pip
-      - run: pip install -r requirements.txt
+      - name: Checkout main
+        uses: actions/checkout@v2
 
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
+        # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # CONFIG_FILE: folder/mkdocs.yml
+          EXTRA_PACKAGES: build-base
+          # GITHUB_DOMAIN: github.myenterprise.com
+          REQUIREMENTS: requirements.txt
